--- a/html/18.css.animation.html
+++ b/html/18.css.animation.html
@@ -42,6 +42,21 @@
 		<div class="box box10">
 			<img src="../img/parallax1.jpg" alt="그림" class="img">
 		</div>
+		<div class="box box11">
+			<img src="../img/parallax1.jpg" alt="그림" class="img">
+		</div>
+		<div class="box box11 bear1">
+			<img src="../img/p3.jpg" alt="그림" class="img">
+		</div>
+		<div class="box box11 bear2">
+			<img src="../img/p3.jpg" alt="그림" class="img">
+		</div>
+		<div class="box box11 bear3">
+			<img src="../img/p3.jpg" alt="그림" class="img">
+		</div>
+		<div class="box box13">
+			<img src="../img/p4.jpg" alt="그림" class="img">
+		</div>
 	</div>
 	<script src="../js/18.animation.js"></script>
 </body>
