--- a/html/17.am.html
+++ b/html/17.am.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>jQuery Animation을 배워보자</title>
-	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/03.base.css">
 	<link rel="stylesheet" href="../css/17.am.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
 </head>
-
 <body>
 	<div class="bts">
 		<button id="bt1">hide()</button>
@@ -37,52 +35,50 @@
 	<div class="stage">
 		<div id="box3" class="box"></div>
 	</div>
+
 	<div class="bts">
 		<button id="bt10">slideUp()</button>
 		<button id="bt11">slideDown()</button>
-		<button id="bt12">slidedToggle()</button>
+		<button id="bt12">slideToggle()</button>
 	</div>
 	<div class="stage">
 		<div id="box4" class="box"></div>
 	</div>
 
 	<div class="bts">
-		<button id="bt13">움직여()</button>
-		<button id="bt14">원위치()</button>
-
+		<button id="bt13">움직여</button>
+		<button id="bt14">원위치</button>
 	</div>
 	<div class="stage">
 		<div id="box5" class="box"></div>
 	</div>
-	<div class="bts">
-		<button id="bt15">움직여()</button>
-		<button id="bt16">원위치()</button>
 
+	<div class="bts">
+		<button id="bt15">움직여</button>
+		<button id="bt16">원위치</button>
 	</div>
 	<div class="stage">
 		<div id="box6" class="box"></div>
 	</div>
+
 	<div class="bts">
 		<button id="bt17">움직여</button>
 		<button id="bt18">원위치</button>
-		
-
+	</div>
+	<div class="stage big">
+		<div id="box7" class="box"></div>
+		<div id="box8" class="box"></div>
+		<div id="box9" class="box"></div>
 	</div>
 
-<div class="stage big">
-	<div id="box7" class="box"></div>
-	<div id="box8" class="box"></div>
-	<div id="box9" class="box"></div>
-</div>
+	<div class="bts">
+		<button id="bt19">움직여</button>
+		<button id="bt20">원위치</button>
+	</div>
+	<div class="stage big">
+		<div id="box10" class="box"></div>
+	</div>
 
-<div class="bts">
-	<button id="bt19">움직여</button>
-	<button id="bt20">원위치</button>
-</div>
-<div class="stage big">
-	<div id="box10" class="box"></div>
-</div>
-		<script src="../js/17.am.js"></script>
+	<script src="../js/17.animation.js"></script>
 </body>
-
 </html>
