--- a/html/21.banner.html
+++ b/html/21.banner.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,22 +8,14 @@
 	<link rel="stylesheet" href="../css/21.banner.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
 </head>
-
 <body>
+	<div class="bts">
+		<button class="interval-start">시작</button>
+		<button class="interval-end">정지</button>
+	</div>
 	<div class="wrapper">
 		<div class="ban-wrap clear">
-			<div class="ban">
-				<img src="../img/ban1.png" alt="배너1" class="img">
-			</div>
-			<div class="ban">
-				<img src="../img/ban2.png" alt="배너2" class="img">
-			</div>
-			<div class="ban">
-				<img src="../img/ban3.png" alt="배너3" class="img">
-			</div>
-			<div class="ban">
-				<img src="../img/ban4.png" alt="배너3" class="img">
-			</div>
+			<!-- .ban*8>img.img[src=../img/ban$.png] -->
 			<div class="ban">
 				<img src="../img/ban1.png" alt="배너1" class="img">
 			</div>
@@ -43,5 +34,4 @@
 	</div>
 	<script src="../js/21.banner.js"></script>
 </body>
-
 </html>
