--- a/html/22.banner.html
+++ b/html/22.banner.html
@@ -6,14 +6,10 @@
 	<title>Banner 예제</title>
 	<link rel="stylesheet" href="../css/all.min.css">
 	<link rel="stylesheet" href="../css/03.base.css">
-	<link rel="stylesheet" href="../css/21.banner.css">
+	<link rel="stylesheet" href="../css/22.banner.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
 </head>
 <body>
-	<div class="bts">
-		<button class="interval-start">시작</button>
-		<button class="interval-end">정지</button>
-	</div>
 	<div class="wrapper">
 		<div class="ban-wrap clear">
 			<!-- .ban*8>img.img[src=../img/ban$.png] -->
@@ -29,11 +25,12 @@
 			<div class="ban">
 				<img src="../img/ban4.png" alt="배너3" class="img">
 			</div>
+			<img src="../img/ban1.png" alt="배너1" class="img">
 		</div>
 		<div class="bt-prev">&lt;</div>
 		<div class="bt-next">&gt;</div>
 		<div class="pagers"></div>
 	</div>
-	<script src="../js/21.banner.js"></script>
+	<script src="../js/22.banner.js"></script>
 </body>
 </html>
