--- a/html/23.banner.html
+++ b/html/23.banner.html
@@ -6,14 +6,11 @@
 	<title>Banner 예제</title>
 	<link rel="stylesheet" href="../css/all.min.css">
 	<link rel="stylesheet" href="../css/03.base.css">
-	<link rel="stylesheet" href="../css/21.banner.css">
+	<link rel="stylesheet" href="../css/23.banner.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
 </head>
 <body>
-	<div class="bts">
-		<button class="interval-start">시작</button>
-		<button class="interval-end">정지</button>
-	</div>
+	<button id="bt">눌러봐</button>
 	<div class="wrapper">
 		<div class="ban-wrap clear">
 			<!-- .ban*8>img.img[src=../img/ban$.png] -->
@@ -34,6 +31,6 @@
 		<div class="bt-next">&gt;</div>
 		<div class="pagers"></div>
 	</div>
-	<script src="../js/21.banner.js"></script>
+	<script src="../js/23.banner.js"></script>
 </body>
 </html>
