--- a/html/19.class.html
+++ b/html/19.class.html
@@ -1,86 +1,84 @@
 <!DOCTYPE html>
 <html lang="ko">
-	<!DOCTYPE html>
-	<html lang="ko">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>class 다루기</title>
-		<link rel="stylesheet" href="../css/base.css">
-		<link rel="stylesheet" href="../css/19.class.css">
-		<script src="../js/jquery-3.5.1.min.js"></script>
-	</head>
-	<body>
-		<div class="wrapper">
-			<header class="header clear">
-				<h1 class="logo">LOGO</h1>
-				<!-- ul.navi-wrap>li.navi*5{Menu$} -->
-				<ul class="navi-wrap">
-					<li class="navi">Menu1</li>
-					<li class="navi">Menu2</li>
-					<li class="navi">Menu3</li>
-					<li class="navi">Menu4</li>
-					<li class="navi">Menu5</li>
-				</ul>
-			</header>
-			<div class="main-wrap">
-	
-			</div>
-			<section class="main-content">
-				<article class="info-wrap">
-					<div class="info-menus">
-						<div class="menu">공지사항</div>
-						<div class="menu">Q&A</div>
-					</div>
-					<div class="info-conts">
-						<table class="notice-tb">
-							<tbody>
-								<tr>
-									<td>공지사항3</td>
-									<td>관리자</td>
-									<td>2020-05-19</td>
-								</tr>
-								<tr>
-									<td>공지사항2</td>
-									<td>관리자</td>
-									<td>2020-05-18</td>
-								</tr>
-								<tr>
-									<td>공지사항1</td>
-									<td>관리자</td>
-									<td>2020-05-17</td>
-								</tr>
-							</tbody>
-						</table>
-						<table class="qna-tb">
-							<tbody>
-								<tr>
-									<td>질문3</td>
-									<td>회원</td>
-									<td>2020-05-19</td>
-								</tr>
-								<tr>
-									<td>질문2</td>
-									<td>회원</td>
-									<td>2020-05-18</td>
-								</tr>
-								<tr>
-									<td>질문1</td>
-									<td>회원</td>
-									<td>2020-05-17</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</article><!-- info-wrap -->
-				<article class="banner-wrap">
-	
-				</article>
-				<article class="link-wrap">
-	
-				</article>
-			</section>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>class 다루기</title>
+	<link rel="stylesheet" href="../css/03.base.css">
+	<link rel="stylesheet" href="../css/19.class.css">
+	<script src="../js/jquery-3.5.1.min.js"></script>
+</head>
+<body>
+	<div class="wrapper">
+		<header class="header clear">
+			<h1 class="logo">LOGO</h1>
+			<!-- ul.navi-wrap>li.navi*5{Menu$} -->
+			<ul class="navi-wrap">
+				<li class="navi">Menu1</li>
+				<li class="navi">Menu2</li>
+				<li class="navi">Menu3</li>
+				<li class="navi">Menu4</li>
+				<li class="navi">Menu5</li>
+			</ul>
+		</header>
+		<div class="main-wrap">
+
 		</div>
-		<script src="../js/19.class.js"></script>
-	</body>
-	</html>
+		<section class="main-content">
+			<article class="info-wrap">
+				<div class="info-menus clear">
+					<div class="menu">공지사항</div>
+					<div class="menu">Q&A</div>
+				</div>
+				<div class="info-conts">
+					<table class="notice-tb">
+						<tbody>
+							<tr>
+								<td>공지사항3</td>
+								<td>관리자</td>
+								<td>2020-05-19</td>
+							</tr>
+							<tr>
+								<td>공지사항2</td>
+								<td>관리자</td>
+								<td>2020-05-18</td>
+							</tr>
+							<tr>
+								<td>공지사항1</td>
+								<td>관리자</td>
+								<td>2020-05-17</td>
+							</tr>
+						</tbody>
+					</table>
+					<table class="qna-tb">
+						<tbody>
+							<tr>
+								<td>질문3</td>
+								<td>회원</td>
+								<td>2020-05-19</td>
+							</tr>
+							<tr>
+								<td>질문2</td>
+								<td>회원</td>
+								<td>2020-05-18</td>
+							</tr>
+							<tr>
+								<td>질문1</td>
+								<td>회원</td>
+								<td>2020-05-17</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</article><!-- info-wrap -->
+			<article class="banner-wrap">
+
+			</article>
+			<article class="link-wrap">
+
+			</article>
+		</section>
+	</div>
+	<script src="../js/19.class.js"></script>
+</body>
+</html>
