--- a/html/27.video.html
+++ b/html/27.video.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>비디오를 배워보자</title>
+	<title>Video/Audio를 알아보자</title>
 	<link rel="stylesheet" href="../css/all.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.mb.YTPlayer/3.3.1/css/jquery.mb.YTPlayer.min.css">
-	<link rel="stylesheet" href="../css/03.base.css">
-<link rel="stylesheet" href="../css/27.video.css">
-<script src="../js/jquery-3.5.1.min.js"></script>
-<script src="../js/jquery.mb.YTPlayer.min.js"></script>
+	<link rel="stylesheet" href="../css/jquery.mb.YTPlayer.min.css">
+	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/27.video.css">
+	<script src="../js/jquery-3.5.1.min.js"></script>
+	<script src="../js/jquery.mb.YTPlayer.min.js"></script>
 </head>
 <body>
 	<div class="wrapper">
@@ -20,9 +20,9 @@
 			<iframe class="youtube" src="https://www.youtube.com/embed/oXdzvMLiE7Q?autoplay=1&muted=1&loop=1&showinfo=0&controls=0&playlist=oXdzvMLiE7Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="prevent"></div>
 		</div>
-		<div class="youtube-wrap"></div>
+		<div></div>
 		<div id="background" class="player" data-property="{
-      videoURL:'https://www.youtube.com/embed/oXdzvMLiE7Q?',
+      videoURL:'https://youtube.com/embed/oXdzvMLiE7Q',
       mute: true,
       showControls: false,
       useOnMobile: true,
@@ -36,7 +36,6 @@
 		}">
 	</div>
 	</div>
-
 	<script src="../js/27.video.js"></script>
 </body>
 </html>
