--- a/html/29.test.html
+++ b/html/29.test.html
@@ -18,6 +18,6 @@
 			<img src="../img/pic_bulboff.gif" class="lamp lamp-off"> -->
 		</div>
 	</div>
-	<script src="../js/29.test.js"></script>
+	<script src="../js/29.test1.js"></script>
 </body>
 </html>
