--- a/html/39.drag,.html
+++ b/html/39.drag,.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Drag</title>
 	<link rel="stylesheet" href="../css/all.min.css">
-	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/03.base.css">
 	<style>
 		html, body {cursor: none;}
 		.box {width: 200px; height: 200px; background-color: red; position: absolute; 
