--- a/html/03.start-review.html
+++ b/html/03.start-review.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>계산기</title>
-	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/03.base.css">
 	<link rel="stylesheet" href="../css/02.start-review.css">
 </head>
 
