--- a/html/06.navi.html
+++ b/html/06.navi.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>네비게이션을 만들어 보자</title>
-	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/03.base.css">
 	<link rel="stylesheet" href="../css/06.navi.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
 </head>
