--- a/html/07.if.html
+++ b/html/07.if.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>제어문(if)</title>
-	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/03.base.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
 	<style>
 		form {width: 300px; padding: 24px; margin: 200px auto; border: 2px solid #aaa; border-radius: 8px;}
