--- a/html/08.for.html
+++ b/html/08.for.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>반복문(for)</title>
-	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/03.base.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
 	<style>
 		.box {width: 3vw; height: 3vh; border: 1px solid orange; background-color: red; float: left; transition: all 2s;}
