--- a/html/09.fors.html
+++ b/html/09.fors.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>반복문(for)</title>
-	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/03.base.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
 	<style>
 		.wrapper {max-width: 1600px; margin: 20px auto;}
