--- a/html/12.score.html
+++ b/html/12.score.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>성적관리</title>
-	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/03.base.css">
 	<link rel="stylesheet" href="../css/12.score.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
 </head>
