--- a/html/15.gallery.html
+++ b/html/15.gallery.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Gallery</title>
-	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/03.base.css">
 	<link rel="stylesheet" href="../css/15.gallery.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
 </head>
