--- a/html/17.am.html
+++ b/html/17.am.html
@@ -79,6 +79,6 @@
 		<div id="box10" class="box"></div>
 	</div>
 
-	<script src="../js/17.animation.js"></script>
+	<script src="../js/17.am.js"></script>
 </body>
 </html>
