--- a/html/27.video.html
+++ b/html/27.video.html
@@ -6,7 +6,7 @@
 	<title>Video/Audio를 알아보자</title>
 	<link rel="stylesheet" href="../css/all.min.css">
 	<link rel="stylesheet" href="../css/jquery.mb.YTPlayer.min.css">
-	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/03.base.css">
 	<link rel="stylesheet" href="../css/27.video.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
 	<script src="../js/jquery.mb.YTPlayer.min.js"></script>
