--- a/html/28.table.html
+++ b/html/28.table.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Table-cell을 알아보자</title>
-	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/03.base.css">
 	<link rel="stylesheet" href="../css/28.table.css">
 </head>
 <body>
